# kivy_sail_rightofway

./: .gitignore  AndroidManifest.xml  Datenschutzbestimmung.md  README.md  Readme_release.md  buildozer.spec  numberofquestions.json  pyproject.toml
assets/: dict_questions_answers.odt
backup_kivy/: Sail_rightofway.kv  main.py  quiz.py
experimental/: exerimental.py
minimum_example_sail/: main.kv  main.py  main_easy.py
sail_rightofway/: Sail_rightofway.kv  exerimental.py  main.py  messages.py  numberofquestions.json  quiz.py
sail_rightofway/assets/sounds/: 25. Juli, 18.52​.aac  Boot Crash 3.aac  Boot crash 2.aac  Boot hits.aac  Glockenspiel.aac  Meer.aac  Segel sounds.aac  boat_hit.aac  despacito marimba.aac  marimba cover.aac
