[tool.poetry]
name = "kivy-right_of_way"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]
readme = "README.md"
# packages = [{include = "kivy_right_of_way"}]

[tool.poetry.dependencies]
python = ">= 3.10, < 3.11"              # ">=3.8.1, <3.9"
# Kivy = "==2.2.1"    #"==2.1.0"   # ">= 2.0.0"           # ">=2.0.0"   # 2.1.0
# Kivy = "==2.1.0"
Kivy = "==2.2.1"
# kivymd = "==1.0.2"    # "== 1.1.1"    # >=1.1.1    # ">=1.1.1"   # 1.1.1
kivymd = "==1.0.2"
# pandas = ">=1.5.2"
# numpy = ">=1.24.1"
# kivy==2.1.0, kivymd==1.1.0, sdl2_ttf == 2.0.15, pillow
# sdl2_ttf = "*"  # ">=2.0.15"
pysdl2-dll = "*"   # 0.9.16
pysdl2 = "*"    # 2.28.0
pyjnius = "<1.5.0"   # 1.5.0


#python-dotenv = "*"   #"0.21.1"
# "yaml-1.3" = ">= 0.1.0"
pyyaml = "*" # ">= 6.0"
buildozer = ">= 1.5.0" # ">=1.5.0"
# cython = ">= 0.29.33"  # ">=0.29.33"
cython = "< 3.0.0"   # 0.29.36
pillow = "<10.0.0"



[tool.poetry.group.dev.dependencies]
black = ">=22.12.0"
flake8 = ">=6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
